Ejemplos Bison+Flex/Ejemplo 2 - Calculadora Infija/obj/Ejemplo_Calculadora_Notacion_Infija.output
Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | exp '\n'
    5     | error '\n'

    6 exp: NUM
    7    | ENTERO
    8    | exp '+' exp
    9    | exp '-' exp
   10    | exp '*' exp
   11    | exp '/' exp
   12    | exp '^' exp
   13    | '-' exp
   14    | '(' exp ')'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5
'(' (40) 14
')' (41) 14
'*' (42) 10
'+' (43) 8
'-' (45) 9 13
'/' (47) 11
'^' (94) 12
error (256) 5
NUM (258) 6
ENTERO (259) 7


No terminales con las reglas donde aparecen

$accept (13)
    en la izquierda: 0
input (14)
    en la izquierda: 1 2, en la derecha: 0 2
line (15)
    en la izquierda: 3 4 5, en la derecha: 2
exp (16)
    en la izquierda: 6 7 8 9 10 11 12 13 14, en la derecha: 4 8 9 10
    11 12 13 14


estado 0

    0 $accept: . input $end
    1 input: .
    2      | . input line

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line
    3 line: . '\n'
    4     | . exp '\n'
    5     | . error '\n'
    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    9    | . exp '-' exp
   10    | . exp '*' exp
   11    | . exp '/' exp
   12    | . exp '^' exp
   13    | . '-' exp
   14    | . '(' exp ')'

    $end    desplazar e ir al estado 2
    error   desplazar e ir al estado 3
    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7
    '\n'    desplazar e ir al estado 8

    line  ir al estado 9
    exp   ir al estado 10


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: error . '\n'

    '\n'  desplazar e ir al estado 11


estado 4

    6 exp: NUM .

    $default  reduce usando la regla 6 (exp)


estado 5

    7 exp: ENTERO .

    $default  reduce usando la regla 7 (exp)


estado 6

    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    9    | . exp '-' exp
   10    | . exp '*' exp
   11    | . exp '/' exp
   12    | . exp '^' exp
   13    | . '-' exp
   13    | '-' . exp
   14    | . '(' exp ')'

    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    exp  ir al estado 12


estado 7

    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    9    | . exp '-' exp
   10    | . exp '*' exp
   11    | . exp '/' exp
   12    | . exp '^' exp
   13    | . '-' exp
   14    | . '(' exp ')'
   14    | '(' . exp ')'

    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    exp  ir al estado 13


estado 8

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 9

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 10

    4 line: exp . '\n'
    8 exp: exp . '+' exp
    9    | exp . '-' exp
   10    | exp . '*' exp
   11    | exp . '/' exp
   12    | exp . '^' exp

    '+'   desplazar e ir al estado 14
    '-'   desplazar e ir al estado 15
    '*'   desplazar e ir al estado 16
    '/'   desplazar e ir al estado 17
    '^'   desplazar e ir al estado 18
    '\n'  desplazar e ir al estado 19


estado 11

    5 line: error '\n' .

    $default  reduce usando la regla 5 (line)


estado 12

    8 exp: exp . '+' exp
    9    | exp . '-' exp
   10    | exp . '*' exp
   11    | exp . '/' exp
   12    | exp . '^' exp
   13    | '-' exp .  ['+', '-', ')', '\n']

    '*'  desplazar e ir al estado 16
    '/'  desplazar e ir al estado 17
    '^'  desplazar e ir al estado 18

    $default  reduce usando la regla 13 (exp)


estado 13

    8 exp: exp . '+' exp
    9    | exp . '-' exp
   10    | exp . '*' exp
   11    | exp . '/' exp
   12    | exp . '^' exp
   14    | '(' exp . ')'

    '+'  desplazar e ir al estado 14
    '-'  desplazar e ir al estado 15
    '*'  desplazar e ir al estado 16
    '/'  desplazar e ir al estado 17
    '^'  desplazar e ir al estado 18
    ')'  desplazar e ir al estado 20


estado 14

    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    8    | exp '+' . exp
    9    | . exp '-' exp
   10    | . exp '*' exp
   11    | . exp '/' exp
   12    | . exp '^' exp
   13    | . '-' exp
   14    | . '(' exp ')'

    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    exp  ir al estado 21


estado 15

    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    9    | . exp '-' exp
    9    | exp '-' . exp
   10    | . exp '*' exp
   11    | . exp '/' exp
   12    | . exp '^' exp
   13    | . '-' exp
   14    | . '(' exp ')'

    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    exp  ir al estado 22


estado 16

    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    9    | . exp '-' exp
   10    | . exp '*' exp
   10    | exp '*' . exp
   11    | . exp '/' exp
   12    | . exp '^' exp
   13    | . '-' exp
   14    | . '(' exp ')'

    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    exp  ir al estado 23


estado 17

    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    9    | . exp '-' exp
   10    | . exp '*' exp
   11    | . exp '/' exp
   11    | exp '/' . exp
   12    | . exp '^' exp
   13    | . '-' exp
   14    | . '(' exp ')'

    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    exp  ir al estado 24


estado 18

    6 exp: . NUM
    7    | . ENTERO
    8    | . exp '+' exp
    9    | . exp '-' exp
   10    | . exp '*' exp
   11    | . exp '/' exp
   12    | . exp '^' exp
   12    | exp '^' . exp
   13    | . '-' exp
   14    | . '(' exp ')'

    NUM     desplazar e ir al estado 4
    ENTERO  desplazar e ir al estado 5
    '-'     desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    exp  ir al estado 25


estado 19

    4 line: exp '\n' .

    $default  reduce usando la regla 4 (line)


estado 20

   14 exp: '(' exp ')' .

    $default  reduce usando la regla 14 (exp)


estado 21

    8 exp: exp . '+' exp
    8    | exp '+' exp .  ['+', '-', ')', '\n']
    9    | exp . '-' exp
   10    | exp . '*' exp
   11    | exp . '/' exp
   12    | exp . '^' exp

    '*'  desplazar e ir al estado 16
    '/'  desplazar e ir al estado 17
    '^'  desplazar e ir al estado 18

    $default  reduce usando la regla 8 (exp)


estado 22

    8 exp: exp . '+' exp
    9    | exp . '-' exp
    9    | exp '-' exp .  ['+', '-', ')', '\n']
   10    | exp . '*' exp
   11    | exp . '/' exp
   12    | exp . '^' exp

    '*'  desplazar e ir al estado 16
    '/'  desplazar e ir al estado 17
    '^'  desplazar e ir al estado 18

    $default  reduce usando la regla 9 (exp)


estado 23

    8 exp: exp . '+' exp
    9    | exp . '-' exp
   10    | exp . '*' exp
   10    | exp '*' exp .  ['+', '-', '*', '/', ')', '\n']
   11    | exp . '/' exp
   12    | exp . '^' exp

    '^'  desplazar e ir al estado 18

    $default  reduce usando la regla 10 (exp)


estado 24

    8 exp: exp . '+' exp
    9    | exp . '-' exp
   10    | exp . '*' exp
   11    | exp . '/' exp
   11    | exp '/' exp .  ['+', '-', '*', '/', ')', '\n']
   12    | exp . '^' exp

    '^'  desplazar e ir al estado 18

    $default  reduce usando la regla 11 (exp)


estado 25

    8 exp: exp . '+' exp
    9    | exp . '-' exp
   10    | exp . '*' exp
   11    | exp . '/' exp
   12    | exp . '^' exp
   12    | exp '^' exp .  ['+', '-', '*', '/', '^', ')', '\n']

    $default  reduce usando la regla 12 (exp)
